# fragment-completion

./: .gitignore  CLAUDE.md  README.md  main.py  plot_similarity_diff.py  pyproject.toml  replot_by_encoder.py  replot_combined.py  run.py  run_completion.py  run_gestalt_vis.py  run_similarity_analysis.py
analysis/: cluster_concept_labels.py  fix_concept_clusters.py  plot.py  vis_category.py  visualize.py
data/: generate_metadata.py  prepare_coco.py
data/fragment_v2/: metadata.json
experiments/exp1/: gestalt.py  mnemonic.py  plot.py  run.py  semantic.py  similarity.py
experiments/exp2/: clip_interp.py  dinov2_interp.py  ground_retrieval.py  plot.py  saliency_masking.py
experiments/exp3/: cav_ablate.py  cav_degrade.py  cav_patch.py  cav_plot.py  cav_subspace_ablate.py  cav_subspace_retrieval.py  cav_train.py
models/: __init__.py  clip.py  dino.py  dinov2.py  encoder.py  ijepa.py  llava.py  mae.py  mae_ft.py  nepa.py  processor.py  qwen2vl.py  registry.py  resnet.py  siglip.py  simclr.py  vit_sup.py
models/encoders/: clip.py  dino.py  dinov2.py  ijepa.py  llava.py  mae.py  mae_ft.py  nepa.py  qwen2vl.py  (+4 more)
results/: results.json
scripts/: plot_all.sh  run_all.sh  run_quick.sh  visualize_samples.sh
src/: clip_interp.py  config.py  dataset.py  dinov2_interp.py  experiment_config.py  gestalt.py  ground_retrieval.py  main.py  masking.py  mnemonic.py  saliency.py  semantic.py  similarity.py  srss.py  utils.py  visualize_embedding.py  visualize_gestalt.py
tests/: conftest.py  test_exp1.py  test_exp2.py  test_masking.py  test_masking_examples.py  test_utils.py
(+33 files in other folders)
